# dftracer-utils

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPERS_GUIDE.md  Makefile  README.md  coverage.sh  dftracer_replay_timeout.sh  flake.nix  jsonlines.sh  pyproject.toml  setup.py  test_mpi.sh  test_mpi_comprehensive.sh
py/: .gitignore  CMakeLists.txt  cleanup.sh  setup.py  test_reader.py
py/src/: reader_ext.cpp
py/src/dft_reader/: __init__.py
py/src/dft_utils/: __init__.py
reader/: CMakeLists.txt  indexer.c  indexer.cpp  indexer.h  main.c  main.cpp  reader.c  reader.cpp  reader.h
src/: CMakeLists.txt
src/analyzers/: analyzer.cpp  constants.cpp  dftracer.cpp
src/dftracer/utils/analyzers/: analyzer.cpp  constants.cpp
src/dftracer/utils/analyzers/helpers/: bins.cpp  derive_io_cat.cpp  helpers.h  ignore_events.cpp  parse_trace.cpp
src/dftracer/utils/analyzers/pipeline/: high_level_metrics.cpp  high_level_metrics.h  pipeline.h  trace_reader.cpp  trace_reader.h
src/dftracer/utils/call_graph/: README.md  call_graph.cpp  call_graph_mpi.cpp
src/dftracer/utils/common/: checkpointer.h  constants.cpp  constants.h  format_detector.cpp  inflater.h  logging.h  logging_fixed.h
src/dftracer/utils/indexer/: checkpoint_size.cpp  checkpoint_size.h  checkpointer.h  constants.h  helpers.cpp  helpers.h  indexer.cpp  indexer_c.cpp  indexer_factory.cpp  indexer_impl.cpp  indexer_impl.h  inflater.h  queries.h
src/dftracer/utils/indexer/common/: format_detector.cpp  format_detector.h  gzip_checkpointer.cpp  gzip_checkpointer.h  gzip_inflater.h
src/dftracer/utils/indexer/gzip/: constants.cpp  gzip_indexer.cpp  gzip_indexer.h
src/dftracer/utils/indexer/gzip/queries/: insert_file_record.cpp  queries.h  query_checkpoint.cpp  query_checkpoints.cpp  query_stored_file_info.cpp
src/dftracer/utils/indexer/queries/: delete_file_record.cpp  insert_checkpoint_record.cpp  insert_file_metadata_record.cpp  insert_file_record.cpp  queries.h  query_checkpoint.cpp  query_checkpoint_size.cpp  query_checkpoints.cpp  query_file_id.cpp  query_max_bytes.cpp  query_num_lines.cpp  query_schema_validity.cpp  query_stored_file_info.cpp
src/dftracer/utils/indexer/sqlite/: database.h  statement.h
src/dftracer/utils/indexer/tar/: constants.cpp  tar_indexer.cpp  tar_indexer.h  tar_parser.cpp  tar_parser.h
src/dftracer/utils/indexer/tar/queries/: insert_archive_metadata_record.cpp  insert_archive_record.cpp  insert_file_record.cpp  insert_tar_checkpoint_record.cpp  insert_tar_file_record.cpp  queries.h  query_archive_id.cpp  query_metadata.cpp  query_tar_checkpoints.cpp  query_tar_files.cpp
src/dftracer/utils/pipeline/: error.cpp  mpi_pipeline.cpp  pipeline.cpp  sequential_pipeline.cpp  thread_pipeline.cpp
src/dftracer/utils/pipeline/engine/: filter.cpp  helpers.h  map.cpp
src/dftracer/utils/pipeline/engines/: filter.cpp  filter_engine.cpp  flatmap_engine.cpp  helpers.h  map.cpp  map_engine.cpp  map_partitions_engine.cpp  repartition_by_hash_engine.cpp
src/dftracer/utils/pipeline/executors/: executor_context.cpp  executor_factory.cpp  executor_type.cpp  mpi_executor.cpp  sequential_executor.cpp  thread_executor.cpp  thread_executor.h
src/dftracer/utils/pipeline/executors/mpi_helpers/: datatype.h  mpi_helpers.h  op.h
src/dftracer/utils/pipeline/executors/scheduler/: scheduler.h  scheduler_factory.cpp  sequential_scheduler.cpp  sequential_scheduler.h  task_item.h  thread_scheduler.cpp  thread_scheduler.h  thread_task_queue.cpp  thread_task_queue.h
src/dftracer/utils/pipeline/task/: error.cpp  task_type.cpp
src/dftracer/utils/pipeline/tasks/: task_context.cpp  task_type.cpp
src/dftracer/utils/python/: dftracer_utils_ext.cpp  indexer.cpp  indexer.h  indexer_checkpoint.cpp  indexer_checkpoint.h  indexer_ext.cpp  indexer_ext.h  json.cpp  json.h  json_ext.cpp  json_ext.h  json_line_processor.h  lazy_json_line_processor.h  pylist_line_processor.h  reader.cpp  reader.h  reader_ext.cpp  utils_ext.cpp
src/dftracer/utils/python/json/: array.cpp  array.h  array_iterator.cpp  array_iterator.h  document.cpp  document.h  helpers.cpp  helpers.h  items_iterator.cpp  items_iterator.h  keys_iterator.cpp  keys_iterator.h  values_iterator.cpp  values_iterator.h
src/dftracer/utils/reader/: gzip_reader.cpp  gzip_reader.h  inflater.h  reader.cpp  reader_c.cpp  reader_factory.cpp  reader_impl.cpp  reader_impl.h  string_line_processor.h  tar_reader.cpp  tar_reader.h
src/dftracer/utils/reader/line_processors/: string_line_processor.h
src/dftracer/utils/reader/streams/: byte_stream.h  factory.h  gzip_byte_stream.h  gzip_factory.h  gzip_line_byte_stream.h  gzip_stream.h  line_byte_stream.h  stream.h  tar_byte_stream.h  tar_factory.h  tar_line_byte_stream.h  tar_stream.h
src/dftracer/utils/replay/: replay.cpp
src/dftracer/utils/utils/: file.cpp  json.cpp  logger.cpp  mpi.cpp  mpi_helpers.h  string.h  timer.cpp  timer.h
src/indexer/: indexer.cpp  indexer.h
src/pipeline/engine/: map.cpp
src/pyreader/: .gitignore  CMakeLists.txt  README.md  __init__.py  pyproject.toml  reader.pxd  reader.pyx  setup.py
src/pyreader/dft_reader/: __init__.py  _reader.cpp
src/pyreader/src/: reader_ext.cpp
src/pyreader/src/dft_reader/: __init__.py
src/python/: dftracer_utils_ext.cpp  indexer_ext.cpp  indexer_ext.h  indexer_py.cpp  indexer_py.h  json_ext.cpp  json_ext.h  reader_ext.cpp  utils_ext.cpp
src/reader/: CMakeLists.txt  filesystem.h  indexer.cpp  indexer.h  main.cpp  platform_compat.h  reader.cpp  reader.h  utils.cpp  utils.h
src/utils/: file.cpp  file.h  filesystem.h  json.cpp  logger.cpp  logger.h  platform_compat.h
tests/: CMakeLists.txt  test_basic_factory.cpp  test_opaque_api.cpp  test_package_discovery.cmake  test_pipeline.cpp  test_raii_api.cpp  test_reader.c  test_reader.cpp  test_reader_formats.cpp  test_reader_formats_c.c  test_reader_robustness.cpp  test_reader_tar_comprehensive.cpp  test_replay.cpp  testing_utilities.cpp  testing_utilities.h
tests/py/: test_reader.py
tests/python/: common.py  test_dask.py  test_indexer.py  test_json.py  test_reader.py  test_utils.py
(+146 files in other folders)
